// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`defaultsFor matches snapshot for admin 1`] = `
{
  "add_calendar_event": true,
  "add_health_log": true,
  "add_recipe": true,
  "add_to_shopping": true,
  "book_vehicle": true,
  "clear_shopping": true,
  "complete_chore": true,
  "delete_calendar_event": true,
  "edit_calendar_event": true,
  "manage_chores": true,
  "manage_contacts": true,
  "manage_finance": true,
  "manage_house": true,
  "manage_pets": true,
  "manage_plugins": true,
  "manage_settings": true,
  "manage_vehicles": true,
  "post_board_message": true,
  "tick_shopping": true,
  "view_board": true,
  "view_calendar": true,
  "view_chores": true,
  "view_contacts": true,
  "view_finance": true,
  "view_food": true,
  "view_health_log": true,
  "view_house": true,
  "view_pets": true,
  "view_vehicles": true,
}
`;

exports[`defaultsFor matches snapshot for baby 1`] = `
{
  "add_calendar_event": false,
  "add_health_log": false,
  "add_recipe": false,
  "add_to_shopping": false,
  "book_vehicle": false,
  "clear_shopping": false,
  "complete_chore": false,
  "delete_calendar_event": false,
  "edit_calendar_event": false,
  "manage_chores": false,
  "manage_contacts": false,
  "manage_finance": false,
  "manage_house": false,
  "manage_pets": false,
  "manage_plugins": false,
  "manage_settings": false,
  "manage_vehicles": false,
  "post_board_message": false,
  "tick_shopping": false,
  "view_board": false,
  "view_calendar": false,
  "view_chores": false,
  "view_contacts": false,
  "view_finance": false,
  "view_food": false,
  "view_health_log": false,
  "view_house": false,
  "view_pets": false,
  "view_vehicles": false,
}
`;

exports[`defaultsFor matches snapshot for child 1`] = `
{
  "add_calendar_event": false,
  "add_health_log": false,
  "add_recipe": false,
  "add_to_shopping": false,
  "book_vehicle": false,
  "clear_shopping": false,
  "complete_chore": true,
  "delete_calendar_event": false,
  "edit_calendar_event": false,
  "manage_chores": false,
  "manage_contacts": false,
  "manage_finance": false,
  "manage_house": false,
  "manage_pets": false,
  "manage_plugins": false,
  "manage_settings": false,
  "manage_vehicles": false,
  "post_board_message": true,
  "tick_shopping": true,
  "view_board": true,
  "view_calendar": true,
  "view_chores": true,
  "view_contacts": true,
  "view_finance": false,
  "view_food": true,
  "view_health_log": false,
  "view_house": false,
  "view_pets": true,
  "view_vehicles": false,
}
`;

exports[`defaultsFor matches snapshot for grandparent 1`] = `
{
  "add_calendar_event": false,
  "add_health_log": true,
  "add_recipe": true,
  "add_to_shopping": true,
  "book_vehicle": false,
  "clear_shopping": false,
  "complete_chore": true,
  "delete_calendar_event": false,
  "edit_calendar_event": false,
  "manage_chores": false,
  "manage_contacts": false,
  "manage_finance": false,
  "manage_house": false,
  "manage_pets": false,
  "manage_plugins": false,
  "manage_settings": false,
  "manage_vehicles": false,
  "post_board_message": true,
  "tick_shopping": true,
  "view_board": true,
  "view_calendar": true,
  "view_chores": true,
  "view_contacts": true,
  "view_finance": false,
  "view_food": true,
  "view_health_log": true,
  "view_house": true,
  "view_pets": true,
  "view_vehicles": true,
}
`;

exports[`defaultsFor matches snapshot for guest 1`] = `
{
  "add_calendar_event": false,
  "add_health_log": false,
  "add_recipe": false,
  "add_to_shopping": false,
  "book_vehicle": false,
  "clear_shopping": false,
  "complete_chore": false,
  "delete_calendar_event": false,
  "edit_calendar_event": false,
  "manage_chores": false,
  "manage_contacts": false,
  "manage_finance": false,
  "manage_house": false,
  "manage_pets": false,
  "manage_plugins": false,
  "manage_settings": false,
  "manage_vehicles": false,
  "post_board_message": false,
  "tick_shopping": true,
  "view_board": true,
  "view_calendar": true,
  "view_chores": true,
  "view_contacts": true,
  "view_finance": false,
  "view_food": true,
  "view_health_log": false,
  "view_house": true,
  "view_pets": true,
  "view_vehicles": false,
}
`;

exports[`defaultsFor matches snapshot for teen 1`] = `
{
  "add_calendar_event": true,
  "add_health_log": true,
  "add_recipe": true,
  "add_to_shopping": true,
  "book_vehicle": true,
  "clear_shopping": false,
  "complete_chore": true,
  "delete_calendar_event": false,
  "edit_calendar_event": false,
  "manage_chores": false,
  "manage_contacts": false,
  "manage_finance": false,
  "manage_house": false,
  "manage_pets": false,
  "manage_plugins": false,
  "manage_settings": false,
  "manage_vehicles": false,
  "post_board_message": true,
  "tick_shopping": true,
  "view_board": true,
  "view_calendar": true,
  "view_chores": true,
  "view_contacts": true,
  "view_finance": false,
  "view_food": true,
  "view_health_log": true,
  "view_house": true,
  "view_pets": true,
  "view_vehicles": true,
}
`;

exports[`defaultsFor matches snapshot for toddler 1`] = `
{
  "add_calendar_event": false,
  "add_health_log": false,
  "add_recipe": false,
  "add_to_shopping": false,
  "book_vehicle": false,
  "clear_shopping": false,
  "complete_chore": true,
  "delete_calendar_event": false,
  "edit_calendar_event": false,
  "manage_chores": false,
  "manage_contacts": false,
  "manage_finance": false,
  "manage_house": false,
  "manage_pets": false,
  "manage_plugins": false,
  "manage_settings": false,
  "manage_vehicles": false,
  "post_board_message": false,
  "tick_shopping": false,
  "view_board": false,
  "view_calendar": true,
  "view_chores": true,
  "view_contacts": false,
  "view_finance": false,
  "view_food": false,
  "view_health_log": false,
  "view_house": false,
  "view_pets": true,
  "view_vehicles": false,
}
`;
